samples/_failures_safe/1761317483_37f229_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6103df41.c: In function ‘main’:
./samples/SAFE/__tmp_6103df41.c:139:5: error: expected expression at end of input
  139 |     if (!
      |     ^~
./samples/SAFE/__tmp_6103df41.c:139:5: error: expected declaration or statement at end of input
